--- a/title.tex
+++ b/title.tex
@@ -117,7 +117,7 @@ Discussions with doc. Lukáš Jelínek and prof. Jan Macháč convinced me of th
 
 Almost surprisingly, all my scientific aspirations found a permanent and selfless support of my wife and all family members, who always had patience with my focusing on abstract problems instead of the more practical aims and with my stubborn attitude towards some of their good advices.
 
-The numerical results presented in the thesis could be hardly obtained without the hard work of hundreds of volunteers contributing to the open-source scientific software: Most of the plots were made using the Matplotlib library \cite{hunter2007}, FDTD computations were based on MEEP \cite{oskooi2010meep} and PWEM computations used the MBP programs \cite{johnson2001mpb}. 
+The numerical results presented in the thesis could be hardly obtained without the hard work of hundreds of volunteers contributing to the open-source scientific software: Most of the plots were made using the Matplotlib library \cite{hunter2007} and computations were based on MEEP \cite{oskooi2010meep} and MPB programs \cite{johnson2001mpb}. 
 
 This work was financially supported by the Czech Science Foundation under Grant No. 14-25639S.
 
