--- a/result.tex
+++ b/result.tex
@@ -9,12 +9,12 @@
 \label{chapter_results}
 \section{Dielectric slab} \label{section_Dielectric slab}
 \paragraph{Dispersion curves of a one-dimensional photonic crystal}
-The one-dimensional photonic crystal (1-D PhC) has been investigated thoroughly in the previous century and found its major application in dielectric mirrors. It is the simplest representative of periodic structures, since due to its continuous translational symmetry in the transverse direction, it exhibits only a subset of different phenomena that can be observed in other periodic structures. Most importantly, no \textit{individual resonances} can occur in 1-D PhC; all interaction with the wave happens through electromagnetic wave reflection (or, scattering) on the interfaces of the layers. The only type of the band gap observed is thus of the Bragg type.
-\begin{figure}[h] \caption{Dispersion curves \textbf{(a)} in free space with virtual periodicity $a$, \textbf{(b)} in dielectric layers with permittivity $\varepsilon = 12$ and 15 \% fill fraction. Side plots show the electric field in $2\times 2$ unit cells, with dielectric outlined by thin black lines.} \label{fg_1dbd} \centering 
+\begin{figure}[h] \caption{Dispersion curves \textbf{(a)} in free space with virtual periodicity $a$, \textbf{(b)} in dielectric layers with permittivity $\varepsilon = 12$ and 15 \% fill fraction. \\
+
+Side plots show the electric field in $2\times 2$ unit cells, with dielectric outlined by thin black lines. The electric field was chosen to be polarized along the $x$-axis and is plotted as a color map (white corresponding to zero).} \label{fg_1dbd} \centering 
 	\begin{overpic}[width=.48\textwidth]{img/Slab_eps001_PWEM.pdf}  \put(1,96) {\textbf{(a)}} \end{overpic}
 	\begin{overpic}[width=.48\textwidth]{img/Slab_eps012_d15.pdf}   \put(1,96) {\textbf{(b)}} \end{overpic}
 \end{figure}
-
 \begin{figure}[t] \caption{Amplitude of \textbf{(a)} reflectance, \textbf{(b)} transmittance and \textbf{(c)} effective index of refraction $\Neff$ (real part solid, imaginary part dashed) for the dielectric slab of 15\% fill fraction in a 300 $\upmu$m unit cell, and varied permittivity of the dielectric $\epsrl \in \{4,12,20\}$} \label{fg_Slab_fillfraction015_epsilon_comparison} \centering \vspace{-3mm}
 \begin{tabular}{r}
 \begin{overpic}[width=0.95\textwidth]{img-meep/Slab_fillfraction015_epsilon_comparison_r.pdf} \put (-1,27) {\textbf{(a)}} \end{overpic}\vspace{-0.055\textwidth}\\
@@ -22,16 +22,17 @@ The one-dimensional photonic crystal (1-D PhC) has been investigated thoroughly 
 \begin{overpic}[width=0.96\textwidth]{img-meep/Slab_fillfraction015_epsilon_comparison_n.pdf} \put (-1,37) {\textbf{(c)}} \end{overpic}\vspace{-0.\textwidth}\\
 \end{tabular}
 \end{figure}
+The one-dimensional photonic crystal (1-D PhC) has been investigated thoroughly in the previous century and found its major application in dielectric mirrors. It is the simplest representative of periodic structures, since  it exhibits only a subset of different phenomena that can be observed in other periodic structures. This is due to its continuous translational symmetry in the transverse direction that excludes all phenomena with a lower symmetry. 
 
+Most importantly, no \textit{individual resonances} can occur in 1-D PhC; all interaction with the wave happens through partial reflection of the electromagnetic wave on the interfaces of the layers. The only type of the band gap observed is of the Bragg type.
 
 Dispersion curves for two examples of one-dimensional photonic crystals were computed using PWEM and are shown in Fig. \ref{fg_1dbd}. 
-%The electric field was chosen to be polarized along the $x$-axis and is plotted as a color map (white corresponding to zero).
-Its left panel shows the folded dispersion curves for a plane wave propagating in vacuum on which we imposed virtual periodicity. To save space the dispersion curves were plotted as \textit{folded}, but one can easily imagine how the curve unfolds into a linear dispersion of vacuum, known as the \textit{light line}. No scattering occurs for homogeneous vacuum, thus for any frequency $f$ exists a real wavenumber $k$ corresponding to a propagating wave and there are no band gaps of finite width. 
+Its left panel shows the folded dispersion curves for a plane wave propagating in vacuum on which we imposed virtual periodicity. To save space, the dispersion curves were plotted as \textit{folded}, but one can easily imagine how the curve unfolds into a linear dispersion of vacuum, known as the \textit{light line}. No scattering occurs for homogeneous vacuum, thus for any frequency $f$ exists a real wavenumber $k$ corresponding to a propagating wave and there are no band gaps of finite width. 
 
-The right panel, Fig. \ref{fg_1dbd}b, is obtained by introducing periodic dielectric layers of permittivity 12 and 15\% filling fraction. The dielectric is outlined by thin black lines. Band gaps of nonzero width corespond to frequency ranges where the wave can not propagate through the structure. %The first photonic band gap starts at the frequency, at which exactly half wavelength matches the cell spacing, i.e. when $2\pi / K= a/2$ as is depicted in the subplot \textit{X1} of Fig. \ref{fg_1dbd}b. The next band starts at the same wavenumber $K$, but the wave now has higher frequency because in the subplot \textit{X2} of Fig. \ref{fg_1dbd}b it is shifted by half its period so that it maximizes the electric field energy that is localized in the areas of lower permittivity. Higher Bragg band gaps are formed by the same mechanism.
+The right panel, Fig. \ref{fg_1dbd}b, is obtained by introducing periodic layers of dielectric with permittivity 12\% and 15\% filling fraction. The dielectric is outlined by thin black lines. Band gaps of nonzero width corespond to frequency ranges where the wave can not propagate through the structure. %TODO The first photonic band gap starts at the frequency, TODO at which exactly half wavelength matches the cell spacing, i.e. when $2\pi / K= a/2$ as is depicted in the subplot \textit{X1} of Fig. \ref{fg_1dbd}b. The next band starts at the same wavenumber $K$, but the wave now has higher frequency because in the subplot \textit{X2} of Fig. \ref{fg_1dbd}b it is shifted by half its period so that it maximizes the electric field energy that is localized in the areas of lower permittivity. Higher Bragg band gaps are formed by the same mechanism.
 
 \paragraph{Characteristics of Bragg-type band gaps}
-Typically, although not always, the extremal points of the photonic bands start and end in the high-symmetry points of the Brillouin zone, such as $\mathbf{\Gamma}$ or $\mathbf{X}$, which are equivalent to the wavenumber $K=m\pi/a$ for $m\in\mathbb{Z}$ in the one-dimensional case discussed. Whenever $K$ is in one of these points, the electric and magnetic fields are periodic in space, and can be easily visualized. The side plots of \ref{fg_1dbd} show the shapes of the electric field $E_x$ in the $(y,z)$ plane at respective frequencies of the band edges. To stress the fact that the field is periodic even in the $\mathbf{X}$ point, each of the side plots spans over 2$\times$2 unit cells. 
+The lower and upper edge of the photonic bands are located the high-symmetry points of the Brillouin zone, such as $\mathbf{\Gamma}$ or $\mathbf{X}$, which are equivalent to the wavenumber $K=m\pi/a$ for $m\in\mathbb{Z}$ in the one-dimensional case discussed. Whenever $K$ is in one of these points, the electric and magnetic fields are periodic in space, and can be easily visualized. The side plots of \ref{fg_1dbd} show the shapes of the electric field $E_x$ in the $(y,z)$ plane at respective frequencies of the band edges. To stress the fact that the field is periodic even in the $\mathbf{X}$ point, each of the side plots spans over 2$\times$2 unit cells. 
 
 An important characteristic of each field pattern is the set of all points where the field amplitude remains zero over the evolution of time. Such sets will be denoted as \textit{nodal planes}, or also, more accurately, \textit{nodal surfaces}.
 
@@ -250,31 +251,31 @@ depicted in Fig. \ref{fg_eSRR}.
 	%\begin{overpic}[width=.48\textwidth]{img-cdh/}  \put(1,96) {\textbf{(b)}} \end{overpic}
 %\end{figure}
 
-\begin{figure}[h] \caption{Current-driven homogenization results for \textbf{(a)} \textbf{(b)} .} \label{fg_cdh1} \centering 
-	\begin{overpic}[width=.48\textwidth]{img-cdh/cdh_emcSRRcap06.pdf}  \put(1,96) {\textbf{(a)}} \end{overpic}
-	\begin{overpic}[width=.48\textwidth]{img-cdh/cdh_emcSRRcap08.pdf}  \put(1,96) {\textbf{(b)}} \end{overpic}
-\end{figure}
-
-\begin{figure}[h] \caption{Current-driven homogenization results for \textbf{(a)} \textbf{(b)} .} \label{fg_cdh2} \centering 
-	\begin{overpic}[width=.48\textwidth]{img-cdh/cdh_emcSRRcap10.pdf}  \put(1,96) {\textbf{(a)}} \end{overpic}
-	\begin{overpic}[width=.48\textwidth]{img-cdh/cdh_emcSRRcap14.pdf}  \put(1,96) {\textbf{(b)}} \end{overpic}
-\end{figure}
-
-\begin{figure}[h] \caption{Current-driven homogenization results for \textbf{(a)} \textbf{(b)} .} \label{fg_cdh3} \centering 
-	\begin{overpic}[width=.48\textwidth]{img-cdh/cdh_SpheresTiO2.pdf}  \put(1,96) {\textbf{(a)}} \end{overpic}
-	\begin{overpic}[width=.48\textwidth]{img-cdh/cdh_SpheresLossLess.pdf}  \put(1,96) {\textbf{(b)}} \end{overpic}
-\end{figure}
-
-\begin{figure}[h] \caption{Current-driven homogenization results for \textbf{(a)} \textbf{(b)} .} \label{fg_cdh4} \centering 
-	\begin{overpic}[width=.48\textwidth]{img-cdh/cdh_SRR.pdf}  \put(1,96) {\textbf{(a)}} \end{overpic}
-	\begin{overpic}[width=.48\textwidth]{img-cdh/cdh_SRRWire.pdf}  \put(1,96) {\textbf{(b)}} \end{overpic}
-\end{figure}
-
-
-\begin{figure}[h] \caption{Current-driven homogenization results for \textbf{(a)} \textbf{(b)} .} \label{fg_cdh5} \centering 
-	\begin{overpic}[width=.48\textwidth]{img-cdh/cdh_sSRR.pdf}  \put(1,96) {\textbf{(a)}} \end{overpic}
-	\begin{overpic}[width=.48\textwidth]{img-cdh/cdh_Wire.pdf}  \put(1,96) {\textbf{(b)}} \end{overpic}
-\end{figure}
+%\begin{figure}[h] \caption{Current-driven homogenization results for \textbf{(a)} \textbf{(b)} .} \label{fg_cdh1} \centering 
+	%\begin{overpic}[width=.48\textwidth]{img-cdh/cdh_emcSRRcap06.pdf}  \put(1,96) {\textbf{(a)}} \end{overpic}
+	%\begin{overpic}[width=.48\textwidth]{img-cdh/cdh_emcSRRcap08.pdf}  \put(1,96) {\textbf{(b)}} \end{overpic}
+%\end{figure}
+%
+%\begin{figure}[h] \caption{Current-driven homogenization results for \textbf{(a)} \textbf{(b)} .} \label{fg_cdh2} \centering 
+	%\begin{overpic}[width=.48\textwidth]{img-cdh/cdh_emcSRRcap10.pdf}  \put(1,96) {\textbf{(a)}} \end{overpic}
+	%\begin{overpic}[width=.48\textwidth]{img-cdh/cdh_emcSRRcap14.pdf}  \put(1,96) {\textbf{(b)}} \end{overpic}
+%\end{figure}
+%
+%\begin{figure}[h] \caption{Current-driven homogenization results for \textbf{(a)} \textbf{(b)} .} \label{fg_cdh3} \centering 
+	%\begin{overpic}[width=.48\textwidth]{img-cdh/cdh_SpheresTiO2.pdf}  \put(1,96) {\textbf{(a)}} \end{overpic}
+	%\begin{overpic}[width=.48\textwidth]{img-cdh/cdh_SpheresLossLess.pdf}  \put(1,96) {\textbf{(b)}} \end{overpic}
+%\end{figure}
+%
+%\begin{figure}[h] \caption{Current-driven homogenization results for \textbf{(a)} \textbf{(b)} .} \label{fg_cdh4} \centering 
+	%\begin{overpic}[width=.48\textwidth]{img-cdh/cdh_SRR.pdf}  \put(1,96) {\textbf{(a)}} \end{overpic}
+	%\begin{overpic}[width=.48\textwidth]{img-cdh/cdh_SRRWire.pdf}  \put(1,96) {\textbf{(b)}} \end{overpic}
+%\end{figure}
+%
+%
+%\begin{figure}[h] \caption{Current-driven homogenization results for \textbf{(a)} \textbf{(b)} .} \label{fg_cdh5} \centering 
+	%\begin{overpic}[width=.48\textwidth]{img-cdh/cdh_sSRR.pdf}  \put(1,96) {\textbf{(a)}} \end{overpic}
+	%\begin{overpic}[width=.48\textwidth]{img-cdh/cdh_Wire.pdf}  \put(1,96) {\textbf{(b)}} \end{overpic}
+%\end{figure}
 
 %img-cdh/cdh_emcSRRcap14.pdf
 %
